[metadata]
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
version = 0.0.1
description = MongoDB Data Object Layer
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = mongodol
display_name = mongodol

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    pymongo
    py2store
		

