[metadata]
name = mongodol
version = 0.0.18
url = https://github.com/i2mint/mongodol
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = MongoDB Data Object Layer
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = mongodol

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	pymongo[srv]==3.12.1
	dol
	linkup
	i2
